# lightning_nodes_challenge

./: .gitignore  Cargo.toml  README.md
migrations/: 20250920223051_nodes.sql
src/: constants.rs  database.rs  fetch_nodes.rs  main.rs
