[package]
name = "bipa_lightning"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0.4.42"
rust_decimal = "1.38.0"
rust_decimal_macros = "1.38.0"
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}
